--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li class="tareas__tareas">
             <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/codigo5-prueba/hola.html">Tarea 1: Challenge 1 FrontEnd</a>
         </li>
+        <li class="tareas__tareas">
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-3/index.html">Tarea 1: Challenge 3 FrontEnd</a>
+        </li>
     </ul>
 
     
