--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="./CSS/estilos.css">
 </head>
 <body>
-
+<header>
     <h1>Repositorio oficinal de Alex Calle</h1>
+    
+</header>
+    
 
     <h2>Tareas - Codigo</h2>
     <hr>
     <ul class="tareas">
         <li class="tareas__tareas">
-            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/codigo5-prueba/hola.html">Tarea 1: Challenge 1 FrontEnd</a>
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-1/index.html">Tarea: Challenge 1 FrontEnd</a>
         </li>
         <li class="tareas__tareas">
-            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-3/index.html">Tarea 1: Challenge 3 FrontEnd</a>
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-3/index.html">Tarea: Challenge 3 FrontEnd</a>
         </li>
     </ul>
 
