--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <h1>Repositorio oficinal de Alex Calle</h1>
     
 </header>
-    
+
 
     <h2>Tareas - Codigo</h2>
-    <hr>
+    <hr/>
     <ul class="tareas">
         <li class="tareas__tareas">
             <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-1/index.html">Tarea: Challenge 1 FrontEnd</a>
+        </li>
+        <li class="tareas__tareas">
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-2/">Tarea: Challenge 2 FrontEnd</a>
         </li>
         <li class="tareas__tareas">
             <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-3/index.html">Tarea: Challenge 3 FrontEnd</a>
