--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-3/index.html">Tarea: Challenge 3 FrontEnd</a>
         </li>
         <li class="tareas__tareas">
-            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-3/index.html">Tarea: Challenge 4 FrontEnd</a>
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-4/">Tarea: Challenge 4 FrontEnd</a>
         </li>
     </ul>
 
