--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
         <li class="tareas__tareas">
             <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/challenge-4/">Tarea: Challenge 4 FrontEnd</a>
         </li>
+        <li class="tareas__tareas">
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/Ejercicios-JS/ejercicios.js">Tarea: Ejercicios JS</a>
+        </li>
     </ul>
+
+
+    
 
  
 
