tarea ejercicios platos

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
         <li class="tareas__tareas">
             <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/Ejercicios-JS/ejercicios.js">Tarea: Ejercicios JS</a>
         </li>
+        <li class="tareas__tareas">
+            <a target="_blank" class="tareas__link" href="https://alexcallemartinez.github.io/Ejercicio-platos-tabla/02-eventos-forms2.html">Tarea: Ejercicios Platos tabla</a>
+        </li>
     </ul>
 
+    
 
     
 
